public interface Receptor {
    void recibe();
}
