public class ReceptorRadio implements Receptor {
    @Override
    public void recibe() {
        System.out.println("Senal recibida en Radio");
    }
}
