public class ReceptorSatelite implements Receptor{
    @Override
    public void recibe() {
        System.out.println("Senal recibida en Satelite");
    }
}
