public class ReceptorTv implements Receptor{
    @Override
    public void recibe(){
        System.out.println("Senal recibida en Tv");
    }
}
